Final version with comments

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                   <button class="square" id="8"></button>
                </div>
             </div>
-            <button id="restart_button" style="display:none;">Сыграть еще</button>
+            <button id="restart_button" style="display:none;">Сыграть еще раз</button>
          </div>
 
          <div class="main-info">
